methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:14: error: value Yellow is not a member of object java.awt.Color
  setCouleurBrosse(Color.Yellow)
                         ^MethodsPicture:16: error: value Red is not a member of object java.awt.Color
  setCouleurBrosse(Color.Red)
                         ^MethodsPicture:18: error: value Blue is not a member of object java.awt.Color
  setCouleurBrosse(Color.Blue)
                         ^MethodsPicture:20: error: value Green is not a member of object java.awt.Color
  setCouleurBrosse(Color.Green)
                         ^